--- a/index.html
+++ b/index.html
@@ -28,18 +28,20 @@
         background-color: white;
         display: flex;
         flex-direction: row;
-        width: 640px;
+        justify-content: center;
+        width: 600px;
         height: 400px;
       }
       .container2 {
         background-color: rgb(68, 68, 242);
         border-radius: 20px;
-        width: 500px;
+        width: 300px;
         color: white;
         display: flex;
         flex-direction: column;
         justify-content: center;
         align-items: center;
+        margin-left: -20px;
       }
       .circle {
         width: 120px;
@@ -76,7 +78,134 @@
         display: flex;
         flex-direction: column;
         margin-top: 170px;
-        margin-left: -20px;
+        margin-right: 150px;
+      }
+      .summary {
+        margin-top: -130px;
+        margin-left: 30px;
+      }
+      .a {
+        background-color: rgb(251, 226, 226);
+        margin-left: 30px;
+        width: 150%;
+        height: 40px;
+        border-radius: 20px;
+        display: flex;
+        justify-content: space-between;
+      }
+      .aa {
+        margin-left: -35px;
+        margin-right: 0px;
+
+        color: darksalmon;
+      }
+      .aaa {
+        margin-right: 20px;
+      }
+      .reac {
+        width: 20px;
+        height: 20px;
+        margin-left: 10px;
+        margin-top: 15px;
+      }
+      .b {
+        background-color: rgb(252, 246, 220);
+        margin-left: 30px;
+        width: 150%;
+        height: 40px;
+        border-radius: 20px;
+        display: flex;
+        justify-content: space-between;
+      }
+      .bb {
+        margin-left: -35px;
+        margin-right: 0px;
+
+        color: rgb(233, 218, 122);
+      }
+      .bbb {
+        margin-right: 20px;
+      }
+      .mem {
+        width: 20px;
+        height: 20px;
+        margin-left: 10px;
+        margin-top: 15px;
+      }
+
+      .c {
+        background-color: rgb(229, 247, 203);
+        margin-left: 30px;
+        width: 150%;
+        height: 40px;
+        border-radius: 20px;
+        display: flex;
+        justify-content: space-between;
+      }
+      .cc {
+        margin-left: -35px;
+        margin-right: 0px;
+
+        color: rgb(107, 244, 2);
+      }
+      .ccc {
+        margin-right: 20px;
+      }
+      .ver {
+        width: 20px;
+        height: 20px;
+        margin-left: 10px;
+        margin-top: 15px;
+      }
+      .d {
+        background-color: rgb(203, 233, 247);
+        margin-left: 30px;
+        width: 150%;
+        height: 40px;
+        border-radius: 20px;
+        display: flex;
+        justify-content: space-between;
+      }
+      .dd {
+        margin-left: -35px;
+        margin-right: 0px;
+
+        color: rgb(0, 168, 252);
+      }
+      .ddd {
+        margin-right: 20px;
+      }
+      .vis {
+        width: 20px;
+        height: 20px;
+        margin-left: 10px;
+        margin-top: 15px;
+      }
+      .find {
+        display: flex;
+        flex-direction: column;
+        gap: 10px;
+      }
+      button {
+        color: white;
+        background-color: rgb(1, 1, 88);
+        border: none;
+        border-radius: 20px;
+        width: 200px;
+        height: 40px;
+        margin: 50px auto 0 auto; /* жоғарғы бос орын 50px, екі жақтан auto */
+        display: block;
+
+        margin-top: 50px;
+        /* margin-left: 50px; */
+      }
+      .con {
+        /* margin-left: 30px; */
+      }
+      .ol {
+        display: flex;
+        align-items: center;
+        justify-content: center;
       }
     </style>
   </head>
@@ -97,13 +226,40 @@
           <br />these tests.
         </p>
       </div>
-      <h3>Summary</h3>
+
       <div class="second">
-        <div>Reaction 80 / 100 <br /></div>
-        <div>100 Memory 92 / 100 <br /></div>
-        <div>Verbal 61 / 100 <br /></div>
-        <div>Visual 72 / 100</div>
-        <button>Continue</button>
+        <h3 class="summary">Summary</h3>
+        <div class="find">
+          <div class="a">
+            <img
+              class="reac"
+              src="assets/images/icon-reaction.svg"
+              alt="memeory"
+            />
+            <p class="aa"><b>Reaction</b></p>
+            <p class="aaa">80/100</p>
+          </div>
+
+          <div class="b">
+            <img class="mem" src="assets/images/icon-memory.svg" alt="b" />
+            <p class="bb"><b>Memory</b></p>
+            <p class="bbb">92/100</p>
+          </div>
+
+          <div class="c">
+            <img class="ver" src="assets/images/icon-verbal.svg" alt="c" />
+            <p class="cc"><b>Verbal</b></p>
+            <p class="ccc">61/100</p>
+          </div>
+
+          <div class="d">
+            <img class="vis" src="assets/images/icon-visual.svg" alt="d" />
+            <p class="dd">Visual</p>
+            <p class="ddd">72/100</p>
+          </div>
+        </div>
+
+        <button class="con">Continue</button>
       </div>
     </div>
   </body>
